--- a/amazon.html
+++ b/amazon.html
@@ -12,6 +12,7 @@
             color: green;
             font-weight: bold;
             font-size: 17px;
+            line-height: 30px;
         }
         .cart-button{
             background-color: #fbfb12;
