--- a/text.html
+++ b/text.html
@@ -3,9 +3,18 @@
 <html lang="en">
 <head>
     <style>
-        .image{
-            background-color: black;
-            height: 100px;
+        .title{
+            font-family: 'Linux Libertine','Georgia','Times',serif;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .link{
+            color: black;
+            font-style: italic;
+        }
+        .description{
+            font-size: 14px;
+            color: rgb(96, 96, 96);
         }
     </style>
     <meta charset="UTF-8">
@@ -13,6 +22,14 @@
     <title>text css</title>
 </head>
 <body>
-    <img class="image" src="https://webb.nasa.gov/content/webbLaunch/assets/images/branding/logo/LOGOTYPE_ONECOLOR_2LINE_WHITE.png" alt="">
+    <p class="title">Virat Kohli</p>  
+    <hr>
+        <a class="link" href="https://en.wikipedia.org/wiki/Virat_Kohli">arcticle &#x000B7;</a>
+        <span>talk &#x2713;</span>
+        <hr>
+        <span class="description">From Wikipedia, the free encyclopedia</span>
+        <br>
+        <span>Shop early for the best selection of holiday favourites. Shop now ></span>
 </body>
+
 </html>
